Phase3 연구1 우측 캡션/화살표 중심 정렬 및 영문 캡션 보정

--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -108,7 +108,7 @@
                   </figure>
 
                   <!-- Right: Vertical Column -->
-                  <div class="overview-figure-col">
+                  <div class="overview-figure-col phase3-right-col">
                     <!-- Top Right -->
                     <figure class="overview-figure-card" style="width: 100% !important; max-width: 100% !important; flex: none !important;">
                       <img loading="lazy" src="../../assets/images/research/phase3/retinoscope_view.png" alt="검영기 뷰"
