--- a/research/overview-advanced.html
+++ b/research/overview-advanced.html
@@ -118,8 +118,7 @@
                   </figure>
 
                   <!-- Right: Vertical Column -->
-                  <div
-                    style="flex: 1; display: flex; flex-direction: column; gap: 0.5rem; justify-content: center; align-items: center;">
+                  <div class="overview-figure-col phase3-right-col" style="gap: 0.5rem;">
                     <!-- Top Right -->
                     <figure class="overview-figure-card" style="width: 100% !important; max-width: 100% !important; flex: none !important;">
                       <img loading="lazy" src="../assets/images/research/phase3/retinoscope_view.png" alt="Retinoscope View"
@@ -129,14 +128,14 @@
                     </figure>
 
                     <!-- Arrow -->
-                    <div style="font-size: 2rem; color: #94a3b8; line-height: 1;">↓</div>
+                    <div class="overview-arrow">↓</div>
 
                     <!-- Bottom Right -->
                     <figure class="overview-figure-card" style="width: 100% !important; max-width: 100% !important; flex: none !important;">
                       <img loading="lazy" src="../assets/images/research/phase3/ir_pupil_image.png" alt="IR Pupil Image"
                         class="phase3-vertical-right">
-                      <figcaption class="overview-figcaption">IR
-                        Camera Retinal Shadow Pattern</figcaption>
+                      <figcaption class="overview-figcaption">Image
+                        processing with binarized retinal shadow pattern</figcaption>
                     </figure>
                   </div>
                 </div>
