모바일 Phase3-4 캡션 줄바꿈 2줄 기준으로 보정

--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -168,8 +168,7 @@
                   <figure style="display: inline-block; width: 58% !important; max-width: 58% !important; min-width: 0 !important; background: transparent; border: none; padding: 0; overflow: visible;">
                     <img loading="lazy" src="../../assets/images/research/phase3/structured_light_process.jpg" alt="구조화광 패턴 이미지 처리 과정"
                       class="phase3-ir-image" style="display: block !important; height: auto !important;">
-                    <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">적외선
-                      패턴 투사 및 이미지 처리 파이프라인</figcaption>
+                    <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">적외선 패턴 투사·이미지 처리</figcaption>
                   </figure>
                 </div>
                 <!-- 아랫줄: 좌-물리적/우-실시간 (동일 y, 각 1.4배) -->
@@ -177,14 +176,14 @@
                   <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../../assets/images/research/phase3/3d_reconstruction_method.png" alt="복원 알고리즘"
                       class="phase3-physical-image" style="display: block !important; height: auto !important;">
-                    <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">물리적 및
-                      머신러닝 기반 하이브리드 복원</figcaption>
+                    <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">물리·머신러닝 기반
+                      하이브리드 복원</figcaption>
                   </figure>
                   <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124" alt="분석 UI"
                       class="phase3-realtime-image" style="display: block !important; height: auto !important;">
-                    <figcaption class="overview-figcaption">실시간
-                      각공막 3D 분석 소프트웨어</figcaption>
+                    <figcaption class="overview-figcaption">실시간 각공막 3D
+                      분석 소프트웨어</figcaption>
                   </figure>
                 </div>
                 <h4>핵심 발견 (Key Findings)
@@ -237,7 +236,8 @@
                       <img loading="lazy" src="../../assets/images/research/phase4_experiment_scene.jpg" alt="실제 실험 진행 장면"
                         class="phase4-ir-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                       <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
-                        적외선으로 낮은 조도에서도 선명한 이미지 획득
+                        저조도 적외선
+                        선명 이미지 획득
                       </figcaption>
                     </figure>
                     <figure
@@ -245,7 +245,8 @@
                       <img loading="lazy" src="../../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="동공 추적 모니터링 화면"
                         class="phase4-realtime-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                       <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
-                        실시간 ROI 검출 후 10가지 동공정보 계산 및 출력 자동화
+                        실시간 ROI 기반
+                        동공 10지표 자동 산출
                       </figcaption>
                     </figure>
                   </div>
@@ -255,7 +256,8 @@
                       <img loading="lazy" src="../../assets/images/research/phase4_pupil_graph.jpg" alt="동공 반응 결과 그래프"
                         class="phase4-stimulus-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                       <figcaption class="overview-figcaption">
-                        자극별 시계열 동공 반응 분석
+                        자극별 시계열
+                        동공 반응 분석
                       </figcaption>
                     </figure>
                   </div>
