--- a/research/overview-advanced.html
+++ b/research/overview-advanced.html
@@ -203,7 +203,8 @@
                       alt="Structured Light Pattern Image Processing"
                       class="phase3-ir-image" style="display: block !important; height: auto !important;" />
                     <figcaption class="overview-figcaption">
-                      Infrared Pattern Projection & Image Processing Pipeline
+                      Infrared Pattern Projection &
+                      Image Processing
                     </figcaption>
                   </figure>
                 </div>
@@ -214,7 +215,8 @@
                       alt="3D Reconstruction Algorithm"
                       class="phase3-physical-image" style="display: block !important; height: auto !important;" />
                     <figcaption class="overview-figcaption">
-                      Physical vs ML-based Hybrid Reconstruction
+                      Physics + ML-based
+                      Hybrid Reconstruction
                     </figcaption>
                   </figure>
                   <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
@@ -222,7 +224,8 @@
                       alt="Real-time Corneo-Scleral Analysis Software UI"
                       class="phase3-realtime-image" style="display: block !important; height: auto !important;" />
                     <figcaption class="overview-figcaption">
-                      Real-time Corneo-Scleral 3D Analysis Software
+                      Real-time Corneo-Scleral 3D
+                      Analysis Software
                     </figcaption>
                   </figure>
                 </div>
@@ -270,7 +273,8 @@
                         <img loading="lazy" src="../assets/images/research/phase4_experiment_scene.jpg" alt="Experiment Scene"
                           class="phase4-ir-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
-                          Clear image acquisition even in low light with IR
+                          Clear IR imaging
+                          in low light
                         </figcaption>
                       </figure>
                       <figure
@@ -278,7 +282,8 @@
                         <img loading="lazy" src="../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="Eye Tracking Monitor"
                           class="phase4-realtime-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
-                          Automated calculation & output of 10 pupil metrics after real-time ROI detection
+                          Real-time ROI-based
+                          automatic output of 10 pupil metrics
                         </figcaption>
                       </figure>
                     </div>
@@ -288,7 +293,8 @@
                         <img loading="lazy" src="../assets/images/research/phase4_pupil_graph.jpg" alt="Pupil Response Graph"
                           class="phase4-stimulus-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption">
-                          Time-series Pupil Response Analysis
+                          Time-series
+                          Pupil Response Analysis
                         </figcaption>
                       </figure>
                     </div>
