--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -173,17 +173,15 @@
                 </div>
                 <!-- 아랫줄: 좌-물리적/우-실시간 (동일 y, 각 1.4배) -->
                 <div class="phase3-study2-mobile-stack" style="display: flex; gap: 1.2rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1.5rem; align-items: stretch;">
-                  <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
+                  <figure class="mobile-tight-card" style="flex: 0 1 48%; max-width: 48%; min-width: 0; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../../assets/images/research/phase3/3d_reconstruction_method.png" alt="복원 알고리즘"
                       class="phase3-physical-image" style="display: block !important; height: auto !important;">
-                    <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">물리·머신러닝 기반
-                      하이브리드 복원</figcaption>
+                    <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">물리·머신러닝 기반 하이브리드 복원</figcaption>
                   </figure>
-                  <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
+                  <figure class="mobile-tight-card" style="flex: 0 1 48%; max-width: 48%; min-width: 0; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124" alt="분석 UI"
                       class="phase3-realtime-image" style="display: block !important; height: auto !important;">
-                    <figcaption class="overview-figcaption">실시간 각공막 3D
-                      분석 소프트웨어</figcaption>
+                    <figcaption class="overview-figcaption">실시간 각공막 3D 분석 소프트웨어</figcaption>
                   </figure>
                 </div>
                 <h4>핵심 발견 (Key Findings)
@@ -232,22 +230,16 @@
                 <div style="margin-bottom: 1.5rem;">
                   <div class="phase4-study1-mobile-stack" style="display: flex; gap: 1rem; justify-content: center; align-items: stretch; flex-wrap: nowrap; margin-bottom: 1rem;">
                     <figure
-                      class="mobile-tight-card" style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
+                      class="mobile-tight-card" style="flex: 0 1 45%; max-width: 45%; min-width: 0; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                       <img loading="lazy" src="../../assets/images/research/phase4_experiment_scene.jpg" alt="실제 실험 진행 장면"
                         class="phase4-ir-image" style="display: block !important; height: auto !important; border-radius: 4px;">
-                      <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
-                        저조도 적외선
-                        선명 이미지 획득
-                      </figcaption>
+                      <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">저조도 적외선 선명 이미지 획득</figcaption>
                     </figure>
                     <figure
-                      class="mobile-tight-card" style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
+                      class="mobile-tight-card" style="flex: 0 1 45%; max-width: 45%; min-width: 0; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                       <img loading="lazy" src="../../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="동공 추적 모니터링 화면"
                         class="phase4-realtime-image" style="display: block !important; height: auto !important; border-radius: 4px;">
-                      <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
-                        실시간 ROI 기반
-                        동공 10지표 자동 산출
-                      </figcaption>
+                      <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">실시간 ROI 기반 동공 10지표 자동 산출</figcaption>
                     </figure>
                   </div>
                   <div style="text-align: center;">
@@ -255,10 +247,7 @@
                       style="display: inline-block; width: 97.865% !important; max-width: 97.865% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                       <img loading="lazy" src="../../assets/images/research/phase4_pupil_graph.jpg" alt="동공 반응 결과 그래프"
                         class="phase4-stimulus-image" style="display: block !important; height: auto !important; border-radius: 4px;">
-                      <figcaption class="overview-figcaption">
-                        자극별 시계열
-                        동공 반응 분석
-                      </figcaption>
+                      <figcaption class="overview-figcaption">자극별 시계열 동공 반응 분석</figcaption>
                     </figure>
                   </div>
                 </div>
