모바일 이미지 카드 폭 원복, 캡션 자동 줄바꿈 유지

--- a/research/overview-advanced.html
+++ b/research/overview-advanced.html
@@ -210,13 +210,13 @@
                 </div>
                 <!-- Bottom Row: left-Physical / right-Real-time (same y, each 1.4x) -->
                 <div class="phase3-study2-mobile-stack" style="display: flex; gap: 1.2rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1.5rem; align-items: stretch;">
-                  <figure class="mobile-tight-card" style="flex: 0 1 48%; max-width: 48%; min-width: 0; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
+                  <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../assets/images/research/phase3/3d_reconstruction_method.png"
                       alt="3D Reconstruction Algorithm"
                       class="phase3-physical-image" style="display: block !important; height: auto !important;" />
                     <figcaption class="overview-figcaption">Physics + ML-based Hybrid Reconstruction</figcaption>
                   </figure>
-                  <figure class="mobile-tight-card" style="flex: 0 1 48%; max-width: 48%; min-width: 0; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
+                  <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124"
                       alt="Real-time Corneo-Scleral Analysis Software UI"
                       class="phase3-realtime-image" style="display: block !important; height: auto !important;" />
@@ -263,13 +263,13 @@
                   <div style="margin-bottom: 1.5rem;">
                     <div class="phase4-study1-mobile-stack" style="display: flex; gap: 1rem; justify-content: center; align-items: stretch; flex-wrap: nowrap; margin-bottom: 1rem;">
                       <figure
-                        class="mobile-tight-card" style="flex: 0 1 45%; max-width: 45%; min-width: 0; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
+                        class="mobile-tight-card" style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                         <img loading="lazy" src="../assets/images/research/phase4_experiment_scene.jpg" alt="Experiment Scene"
                           class="phase4-ir-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">Clear IR imaging in low light</figcaption>
                       </figure>
                       <figure
-                        class="mobile-tight-card" style="flex: 0 1 45%; max-width: 45%; min-width: 0; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
+                        class="mobile-tight-card" style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                         <img loading="lazy" src="../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="Eye Tracking Monitor"
                           class="phase4-realtime-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">Real-time ROI-based automatic output of 10 pupil metrics</figcaption>
