반응형 이미지 크기 통일 및 국영문 캡션 문구 갱신

--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -178,7 +178,7 @@
                       class="phase3-physical-image" style="display: block !important; height: auto !important;">
                     <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">물리·머신러닝 기반 하이브리드 복원</figcaption>
                   </figure>
-                  <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
+                  <figure class="mobile-tight-card mobile-ref-size" style="flex: 0 1 48%; max-width: 48%; min-width: 0; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124" alt="분석 UI"
                       class="phase3-realtime-image" style="display: block !important; height: auto !important;">
                     <figcaption class="overview-figcaption">실시간 각공막 3D 분석 소프트웨어</figcaption>
@@ -230,16 +230,16 @@
                 <div style="margin-bottom: 1.5rem;">
                   <div class="phase4-study1-mobile-stack" style="display: flex; gap: 1rem; justify-content: center; align-items: stretch; flex-wrap: nowrap; margin-bottom: 1rem;">
                     <figure
-                      class="mobile-tight-card" style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
+                      class="mobile-tight-card mobile-ref-size" style="flex: 0 1 45%; max-width: 45%; min-width: 0; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                       <img loading="lazy" src="../../assets/images/research/phase4_experiment_scene.jpg" alt="실제 실험 진행 장면"
                         class="phase4-ir-image" style="display: block !important; height: auto !important; border-radius: 4px;">
-                      <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">저조도 적외선 선명 이미지 획득</figcaption>
+                      <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">박명시 조건에서 동공의 동적 이미지 획득</figcaption>
                     </figure>
                     <figure
-                      class="mobile-tight-card" style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
+                      class="mobile-tight-card mobile-ref-size" style="flex: 0 1 45%; max-width: 45%; min-width: 0; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                       <img loading="lazy" src="../../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="동공 추적 모니터링 화면"
                         class="phase4-realtime-image" style="display: block !important; height: auto !important; border-radius: 4px;">
-                      <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">실시간 ROI 기반 동공 10지표 자동 산출</figcaption>
+                      <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">동공의 실시간 10가지 지표 자동 산출 시스템 개발</figcaption>
                     </figure>
                   </div>
                   <div style="text-align: center;">
