--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -216,7 +216,7 @@
                         color: #94a3b8;
                         text-align: center;
                       ">
-                    민감도 역치 (Sensitivity Thresholds)
+                    우수(dominant hand)와 시로(visual pathway)가 동체시지각에 미치는 영향
                   </figcaption>
                 </figure>
                 <figure>
