--- a/research/overview.html
+++ b/research/overview.html
@@ -215,7 +215,7 @@
                         color: #94a3b8;
                         text-align: center;
                       ">
-                    Sensitivity Thresholds
+                    Effects of Dominant Hand and Visual Pathway on Dynamic Visual Perception
                   </figcaption>
                 </figure>
                 <figure>
