모바일 캡션 줄바꿈/간격 세부 조정

--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -168,7 +168,7 @@
                   <figure style="display: inline-block; width: 58% !important; max-width: 58% !important; min-width: 0 !important; background: transparent; border: none; padding: 0; overflow: visible;">
                     <img loading="lazy" src="../../assets/images/research/phase3/structured_light_process.jpg" alt="구조화광 패턴 이미지 처리 과정"
                       class="phase3-ir-image" style="display: block !important; height: auto !important;">
-                    <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">적외선 패턴 투사·이미지 처리</figcaption>
+                    <figcaption class="phase3-caption-nowrap" style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">적외선 패턴 투사·이미지 처리</figcaption>
                   </figure>
                 </div>
                 <!-- 아랫줄: 좌-물리적/우-실시간 (동일 y, 각 1.4배) -->
@@ -176,7 +176,7 @@
                   <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../../assets/images/research/phase3/3d_reconstruction_method.png" alt="복원 알고리즘"
                       class="phase3-physical-image" style="display: block !important; height: auto !important;">
-                    <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">물리·머신러닝 기반 하이브리드 복원</figcaption>
+                    <figcaption class="phase3-caption-nowrap" style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">물리·머신러닝 기반 하이브리드 복원</figcaption>
                   </figure>
                   <figure class="mobile-tight-card mobile-ref-size" style="flex: 0 1 48%; max-width: 48%; min-width: 0; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124" alt="분석 UI"
@@ -239,7 +239,7 @@
                       class="mobile-tight-card mobile-ref-size" style="flex: 0 1 45%; max-width: 45%; min-width: 0; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                       <img loading="lazy" src="../../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="동공 추적 모니터링 화면"
                         class="phase4-realtime-image" style="display: block !important; height: auto !important; border-radius: 4px;">
-                      <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">동공의 실시간 10가지 지표 자동 산출 시스템 개발</figcaption>
+                      <figcaption class="overview-figcaption phase4-realtime-caption" style="margin-top: 1.6rem; min-height: auto; display: block; text-align: center; line-height: 1.35;">동공의 실시간 10가지 지표<br>자동 산출 시스템 개발</figcaption>
                     </figure>
                   </div>
                   <div style="text-align: center;">
