모바일 Phase4 자극별 시계열 카드 하단 오프셋 적용

--- a/research/overview-advanced.html
+++ b/research/overview-advanced.html
@@ -273,7 +273,7 @@
                       </figure>
                     </div>
                     <div style="text-align: center;">
-                      <figure
+                      <figure class="phase4-stimulus-shift"
                         style="display: inline-block; width: 97.865% !important; max-width: 97.865% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                         <img loading="lazy" src="../assets/images/research/phase4_pupil_graph.jpg" alt="Pupil Response Graph"
                           class="phase4-stimulus-image" style="display: block !important; height: auto !important; border-radius: 4px;">
