모바일 Phase3 Tuning 이미지 1.12배 확대 및 캡션 간격 유지

--- a/research/overview-advanced.html
+++ b/research/overview-advanced.html
@@ -145,8 +145,9 @@
                   <figure
                     style="background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; display: inline-block; width: 90% !important; max-width: 90% !important; overflow: hidden;">
                     <img loading="lazy" src="../assets/images/research/phase3/ai_learning_pipeline.png" alt="AI Learning Pipeline"
+                      class="phase3-tuning-image"
                       style="width: 101.3472% !important; max-width: none !important; margin-left: -0.6736% !important; margin-top: 0.2rem !important; display: block !important; height: auto !important;">
-                    <figcaption class="overview-figcaption">
+                    <figcaption class="overview-figcaption phase3-tuning-caption">
                       Tuning → Learning → Testing → Output ML Pipeline</figcaption>
                   </figure>
                 </div>
