Tuning 이미지 인라인 스타일 제거 및 모바일 1.12배 적용 복구

--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -134,8 +134,7 @@
                 <div style="margin: -0.8rem 0 1.2rem; text-align: center;">
                   <figure class="overview-figure-card" style="display: inline-block; width: 90% !important; max-width: 90% !important; overflow: hidden;">
                     <img loading="lazy" src="../../assets/images/research/phase3/ai_learning_pipeline.png" alt="AI 학습 파이프라인"
-                      class="phase3-tuning-image"
-                      style="width: 101.3472% !important; max-width: none !important; margin-left: -0.6736% !important; margin-top: 0.2rem !important; display: block !important; height: auto !important;">
+                      class="phase3-tuning-image">
                     <figcaption class="overview-figcaption phase3-tuning-caption">
                       Tuning → Learning → Testing → Output 머신러닝 파이프라인</figcaption>
                   </figure>
